WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60737
Inconsistent scroll position at RTL page edge
https://bugs.webkit.org/show_bug.cgi?id=60737
Summary
Inconsistent scroll position at RTL page edge
Adrienne Walker
Reported
2011-05-12 16:47:56 PDT
Created
attachment 93367
[details]
Test case I was loading the attached page on Chromium Linux (WebKit
r86394
) and noticed some scrolling oddities when scrolling all the way to the left. In some cases, it appears as though the page doesn't scroll all the way that it should and cuts off some of the text. If I mouse down and drag left, the page scrolls the rest of the way. This happens intermittently but seems to happen more if I am scrolling slowly.
Attachments
Test case
(856 bytes, text/html)
2011-05-12 16:47 PDT
,
Adrienne Walker
no flags
Details
Incorrect scroll screenshot
(17.33 KB, image/png)
2011-05-12 16:48 PDT
,
Adrienne Walker
no flags
Details
Another bug.
(35.87 KB, image/png)
2011-07-13 06:49 PDT
,
Robin Qiu
no flags
Details
Qt porting has the same problem.
(24.95 KB, image/png)
2011-07-13 06:57 PDT
,
Robin Qiu
no flags
Details
Not only RTL pages have this bug, all scrollable areas have this bug.
(1.55 KB, text/html)
2011-07-18 06:17 PDT
,
Robin Qiu
no flags
Details
Draft patch
(5.74 KB, patch)
2011-07-19 05:45 PDT
,
Robin Qiu
no flags
Details
Formatted Diff
Diff
Patch v1
(7.09 KB, patch)
2011-07-19 06:57 PDT
,
Robin Qiu
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch v1, test again.
(7.09 KB, patch)
2011-07-20 02:08 PDT
,
Robin Qiu
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch v2
(7.27 KB, patch)
2011-07-20 06:32 PDT
,
Robin Qiu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Adrienne Walker
Comment 1
2011-05-12 16:48:48 PDT
Created
attachment 93368
[details]
Incorrect scroll screenshot I'd expect to see ZYX all on screen unlike this screenshot.
Robin Qiu
Comment 2
2011-07-13 06:49:40 PDT
Created
attachment 100669
[details]
Another bug. The content is painted in wrong place after resizing the window. (not 100% reproducible).
Robin Qiu
Comment 3
2011-07-13 06:57:47 PDT
Created
attachment 100670
[details]
Qt porting has the same problem.
Robin Qiu
Comment 4
2011-07-18 06:17:29 PDT
Created
attachment 101154
[details]
Not only RTL pages have this bug, all scrollable areas have this bug. This test case shows how to 100% reproduce this scroll position bug.
Robin Qiu
Comment 5
2011-07-19 05:45:47 PDT
Created
attachment 101305
[details]
Draft patch
Robin Qiu
Comment 6
2011-07-19 06:57:03 PDT
Created
attachment 101313
[details]
Patch v1 The fix is simple. :)
WebKit Review Bot
Comment 7
2011-07-19 14:00:07 PDT
Comment on
attachment 101313
[details]
Patch v1
Attachment 101313
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/9168006
New failing tests: fast/overflow/image-selection-highlight.html fast/layers/scroll-rect-to-visible.html fast/multicol/scrolling-overflow.html fast/repaint/fixed-child-move-after-scroll.html fast/dynamic/anchor-lock.html fast/repaint/fixed-tranformed.html fast/repaint/block-selection-gap-stale-cache-2.html fast/repaint/fixed-child-of-fixed-move-after-scroll.html fast/overflow/scrollbar-position-update.html fast/dom/focus-contenteditable.html fast/overflow/position-fixed-transform-clipping.html fast/repaint/fixed-move-after-scroll.html fast/overflow/008.html fast/overflow/clip-rects-fixed-ancestor.html fast/repaint/fixed-child-of-transformed-move-after-scroll.html fast/overflow/scrollRevealButton.html fast/dom/scroll-reveal-top-overflow.html fast/dom/scroll-reveal-left-overflow.html
Robin Qiu
Comment 8
2011-07-20 02:08:09 PDT
Created
attachment 101441
[details]
Patch v1, test again.
WebKit Review Bot
Comment 9
2011-07-20 03:26:38 PDT
Comment on
attachment 101441
[details]
Patch v1, test again.
Attachment 101441
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/9199227
New failing tests: fast/overflow/image-selection-highlight.html fast/forms/input-number-events.html fast/multicol/scrolling-overflow.html fast/dom/scroll-reveal-left-overflow.html fast/forms/input-number-large-padding.html fast/repaint/fixed-child-move-after-scroll.html fast/dynamic/anchor-lock.html fast/repaint/block-selection-gap-stale-cache-2.html fast/repaint/fixed-child-of-fixed-move-after-scroll.html fast/overflow/008.html fast/overflow/scrollbar-position-update.html fast/dom/focus-contenteditable.html fast/overflow/position-fixed-transform-clipping.html fast/repaint/fixed-move-after-scroll.html fast/forms/input-spinbutton-capturing.html fast/overflow/clip-rects-fixed-ancestor.html fast/repaint/fixed-child-of-transformed-move-after-scroll.html fast/overflow/scrollRevealButton.html fast/dom/scroll-reveal-top-overflow.html fast/layers/scroll-rect-to-visible.html
Robin Qiu
Comment 10
2011-07-20 06:32:39 PDT
Created
attachment 101459
[details]
Patch v2
Antonio Gomes
Comment 11
2011-07-21 06:31:50 PDT
Comment on
attachment 101459
[details]
Patch v2 Feel free to cq+ it when you can watch the bots.
Robin Qiu
Comment 12
2011-07-21 06:42:52 PDT
(In reply to
comment #11
)
> (From update of
attachment 101459
[details]
) > Feel free to cq+ it when you can watch the bots.
OK, thanks for your review. :)
WebKit Review Bot
Comment 13
2011-07-21 20:01:05 PDT
Comment on
attachment 101459
[details]
Patch v2 Clearing flags on attachment: 101459 Committed
r91547
: <
http://trac.webkit.org/changeset/91547
>
WebKit Review Bot
Comment 14
2011-07-21 20:01:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug