https://bugs.webkit.org/show_bug.cgi?id=60737

ThumbPosition() in ScrollbarTheme should be ceiled before returned.
Otherwise, some topest/leftest content can not be shown by dragging
scrollbar thumb.

Source/WebCore:

Patch by Robin Qiu <robin.qiu.dev@gmail.com> on 2011-07-21
Reviewed by Antonio Gomes.

Test: scrollbars/scrollbar-drag-thumb-with-large-content.html

* platform/ScrollbarThemeComposite.cpp:
(WebCore::ScrollbarThemeComposite::thumbPosition):
* platform/qt/ScrollbarThemeQt.cpp:
(WebCore::ScrollbarThemeQt::thumbPosition):

LayoutTests:

Patch by Robin Qiu <robin.qiu.dev@gmail.com> on 2011-07-21
Reviewed by Antonio Gomes.

* scrollbars/scrollbar-drag-thumb-with-large-content-expected.txt: Added.
* scrollbars/scrollbar-drag-thumb-with-large-content.html: Added.

Canonical link: https://commits.webkit.org/80741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91547 268f45cc-cd09-0410-ab3c-d52691b4dbfc